fix docker img path

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2
 jobs:
   build:
     docker:
-      - image: pkinsky:imminent-axolotl
+      - image: pkinsky/circleci:imminent-axolotl
     steps:
       # TODO: it would be great if this were baked into a container.. now it is hashtag lmao, hope circleci caches it and doesn't derp out b/c it's approx 3.5GB
       # - run:
