--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,14 +4,7 @@ jobs:
     docker:
       - image: pkinsky/circleci:imminent-axolotl
     steps:
-      # TODO: it would be great if this were baked into a container.. now it is hashtag lmao, hope circleci caches it and doesn't derp out b/c it's approx 3.5GB
-      # - run:
-      #     name: Get dependencies
-      #     command: |
-      #       apt-get update
-      #       apt-get install -y git wget
-      #       wget -qO- https://get.haskellstack.org/ | sh
-      # - checkout
+      - checkout
       - run:
           name: Build project
           command: |
