--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,7 @@ jobs:
           #todo: feels hacky needing to set LANG like this here
           command: |
             pushd site
-            find -i about.rst
+            file -i about.rst
             cat about.rst
             LANG=en_US.UTF-8 stack build
             LANG=en_US.UTF-8 stack exec site build
