--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,6 @@
 version: 2
 jobs:
-  build:
+  build-job:
     docker:
       - image: pkinsky/circleci:imminent-axolotl
     steps:
@@ -15,3 +15,34 @@ jobs:
       - run:
           name: Print the Current Time
           command: date
+
+  deploy-job:
+    docker:
+      - image: pkinsky/circleci:imminent-axolotl
+    steps:
+      - run:
+          name: get AWS cli tools
+          command: |
+            curl "https://s3.amazonaws.com/aws-cli/awscli-bundle.zip" -o "awscli-bundle.zip"
+            unzip awscli-bundle.zip
+            ./awscli-bundle/install -i /usr/local/aws -b /usr/local/bin/aws
+      - run:
+          name: run AWS deploy script
+          command: aws-deploy-script
+
+
+
+version: 2
+jobs:
+workflows:
+  version: 2
+  build-deploy:
+    jobs:
+      - build-job
+      - deploy-job:
+          requires:
+            - build-job
+          # commented out for testing
+          # filters:
+          #   branches:
+          #     only: master
