--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,11 +41,29 @@ jobs:
             - revision-{{ .Branch }}-{{ .Revision }}
 
       - run:
+          #inline aws deploy script, this way no need for checkout for this job
           name: run AWS deploy script
           command: |
             pwd
             ls -al
-            ./aws-deploy-script aws-code-deploy
+
+
+            timestamp=`date '+%Y_%m_%d__%H_%M_%S'`
+            S3Bucket="imminent-axolotl"
+            S3Key="revisions/imminent-axolotl-app-$timestamp.zip"
+            S3Loc="s3://$S3Bucket/$S3Key"
+
+
+            aws deploy push \
+              --application-name imminent-axolotl \
+              --description "This is a revision for the application imminent-axolotl created at $timestamp" \
+              --ignore-hidden-files \
+              --s3-location $S3Loc \
+              --source aws-code-deploy
+
+            aws deploy create-deployment --application-name imminent-axolotl \
+              --s3-location bucket=$S3Bucket,key=$S3Key,bundleType=zip \
+              --deployment-group-name imminent-axolotl-fleet --description "lorem ipsum"
 
 
 
