--- a/site/.gitignore
+++ b/site/.gitignore
@@ -1,3 +1,25 @@
-.stack-work/*
-_cache/*
-_site/*
+_cache/
+_site/
+.DS_Store
+dist
+dist-*
+cabal-dev
+*.o
+*.hi
+*.chi
+*.chs.h
+*.dyn_o
+*.dyn_hi
+.hpc
+.hsenv
+.cabal-sandbox/
+cabal.sandbox.config
+*.prof
+*.aux
+*.hp
+*.eventlog
+.stack-work/
+cabal.project.local
+.HTF/
+.ghc.environment.*
+TODO.md
