--- a/site/imminent-axolotl.cabal
+++ b/site/imminent-axolotl.cabal
@@ -4,8 +4,16 @@ build-type:         Simple
 cabal-version:      >= 1.10
 
 executable site
+  other-modules:    Config
   main-is:          site.hs
   build-depends:    base == 4.*
-                  , hakyll == 4.12.*
+                  , hakyll == 4.9.*
+                  , bytestring == 0.10.8.*
+                  , containers == 0.5.7.*
+                  , stm == 2.4.4.*
+                  , mtl == 2.2.*
+                  , conduit-combinators == 1.1.*
+                  , hakyll-sass == 0.2.*
+                  , yaml
   ghc-options:      -threaded
   default-language: Haskell2010
