--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,16 +52,17 @@ jobs:
             S3Loc="s3://$S3Bucket/$S3Key"
 
 
+
             aws deploy push \
-              --application-name imminent-axolotl \
-              --description "This is a revision for the application imminent-axolotl created at $timestamp" \
+              --application-name imminent-axolotl-tf \
+              --description "this is a revision for the application imminent-axolotl created at $timestamp with Terraform managed everything" \
               --ignore-hidden-files \
               --s3-location $S3Loc \
               --source aws-code-deploy
 
-            aws deploy create-deployment --application-name imminent-axolotl \
+            aws deploy create-deployment --application-name imminent-axolotl-tf \
               --s3-location bucket=$S3Bucket,key=$S3Key,bundleType=zip \
-              --deployment-group-name imminent-axolotl-fleet --description "lorem ipsum"
+              --deployment-group-name imminent-axolotl-tf --description "deployment at $timestamp via Terraform managed config"
 
 
 
