re-add second 2c2 node, tweak keter file

--- a/lamassu-lifeboat/config/keter.yml
+++ b/lamassu-lifeboat/config/keter.yml
@@ -30,7 +30,7 @@ stanzas:
       - hikikomorphism.com
       - www.hikikomorphism.com
       # so I can debug individual instances
-      - "*.us-west-2.compute.amazonaws.com"
+      # - "*.us-west-2.compute.amazonaws.com"
 
     # Enable to force Keter to redirect to https
     # Can be added to any stanza
