--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,6 +17,7 @@ jobs:
             #whoops, yesod not on path in docker img. TODO: rebuild w/ it on path
             /root/.local/bin/yesod keter
             mv lamassu-lifeboat.keter ../aws-code-deploy/lamassu-lifeboat.keter
+            ls -altrh ../aws-code-deploy
             popd
 
     
@@ -55,6 +56,7 @@ jobs:
             S3Key="revisions/imminent-axolotl-app-$timestamp.zip"
             S3Loc="s3://$S3Bucket/$S3Key"
 
+            ls -altrh aws-code-deploy
 
             aws deploy push \
               --application-name imminent-axolotl-tf \
