--- a/aws-code-deploy/appspec.yml
+++ b/aws-code-deploy/appspec.yml
@@ -1,5 +1,5 @@
 version: 0.0
 os: linux
 files:
-  - source: /lamassu-lifeboat.keter
+  - source: /yesod-server.keter
     destination: /var/www/keter/incoming
