--- a/static-content/config.yml
+++ b/static-content/config.yml
@@ -16,7 +16,7 @@ style:
   navbar_text_colour_mobile: "waves-effect waves-teal black-text"
 
 feed:
-  site_title: "Hikikomorphism"
+  title: "Hikikomorphism"
   description: "This website uses a theme that is a fork of [materialize-hakyll](https://github.com/futtetennista/materialize-hakyll)"
   author_name: "pkinsky"
   author_email: "pkinsky@gm__l.com"
